sandbox-backendapp/sandbox-backendapp-svc-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-backendapp-preview
  namespace: demo
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: sandbox-backendapp
